--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,13 +8,13 @@ on:
 env:
   NPM_TOKEN:    ${{secrets.NPM_TOKEN}}
   GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
-  COMMIT_MESSAGE: ${{github.event.head_commit.message}}
   FORCE_COLOR: 1
 
 
 jobs:
   publish:
     name: Publish to NPM
+    if: contains(github.event.head_commit.message, '[publish]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,4 +24,4 @@ jobs:
       - uses: nodef/npm-config.action@v1.0.0
         with:
           credentials: auto
-      - run: node publish.js "${COMMIT_MESSAGE}"
+      - run: npm publish
